--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1>アプリ一覧</h1>
   <ul>
-    <li><a href="apps/brake-tester-pro/">ブレーキテスター計算Pro</a></li>
-    <li><a href="apps/braking-power-ex/">制動力おおよそ計算EX</a></li>
+    <li><a href="apps/brake-tester/">ブレーキテスター計算Pro</a></li>
+    <li><a href="apps/nantokaku-brake/">制動力おおよそ計算EX</a></li>
   </ul>
 </body>
 </html>
