--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>プライバシーポリシー｜【ブレーキテスター計算Pro】</title>
+  <title>プライバシーポリシー｜【制動力おおよそ計算EX】</title>
   <meta name="description" content="本アプリは個人情報を収集・保存しません。Google Play公開向けのプライバシーポリシー。" />
   <style>
     :root {
@@ -64,7 +64,7 @@
     <header>
       <div class="badge"><span class="badge-dot"></span> Google Play 用 プライバシーポリシー</div>
       <h1>プライバシーポリシー</h1>
-      <p class="subtitle">対象アプリ：<strong>【ブレーキテスター計算Pro】</strong></p>
+      <p class="subtitle">対象アプリ：<strong>【制動力おおよそ計算EX】</strong></p>
     </header><section class="card">
   <h2>1. 基本方針</h2>
   <p>
