--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><!doctype html>
+<!doctype html><!doctype html><!doctype html>
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
@@ -79,4 +79,3 @@
 </html>
 
 
-</html>
