--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><!doctype html><!doctype html>
+<!doctype html>
 <html lang="ja">
 <head>
   <meta charset="utf-8" />
@@ -62,11 +62,11 @@
   <div class="container">
     <h1>アプリ一覧（プライバシーポリシー）</h1>
     <div class="grid">
-      <a href="./apps/brake-tester/" class="card">
+      <a href="./brake-tester/" class="card">
         <h2>ブレーキテスター計算Pro</h2>
         <p>ブレーキテスター計算用ユーティリティアプリ</p>
       </a>
-      <a href="./apps/nantokaku-brake/" class="card">
+      <a href="./nantokaku-brake/" class="card">
         <h2>制動力おおよそ計算EX</h2>
         <p>車両の制動力を概算するシンプル計算ツール</p>
       </a>
@@ -77,5 +77,8 @@
   </div>
 </body>
 </html>
+
+</html>
+
 
 
